--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "build": "export NODE_ENV=production && rm -rf public && webpack --config ./config/webpack.pro.js",
-    "dll": "webpack --config ./config/webpack.dll.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "export NODE_ENV=production && webpack --config ./build-script/webpack.pro.js",
+    "dll": "webpack --config ./build-script/webpack.dll.js",
+    "builddll": "export NODE_ENV=production && npm run dll"
   },
   "keywords": [
     "react",
