--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "^0.11.2",
+    "html-webpack-include-assets-plugin": "^1.0.2",
     "html-webpack-plugin": "^2.28.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
