--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a full stact initial project for react",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node server/index.js",
     "build": "export NODE_ENV=production && webpack --config ./build-script/webpack.pro.js",
     "dll": "webpack --config ./build-script/webpack.dll.js",
     "builddll": "export NODE_ENV=production && npm run dll"
@@ -37,7 +37,9 @@
     "html-webpack-plugin": "^2.28.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
+    "mockjs": "^1.0.1-beta3",
     "morgan": "^1.8.2",
+    "mz": "^2.7.0",
     "style-loader": "^0.18.2",
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.12.0",
@@ -46,6 +48,7 @@
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   }
