--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.1.0",
     "express": "^4.15.3",
+    "express-http-proxy": "^1.1.0",
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "^0.11.2",
     "html-webpack-include-assets-plugin": "^1.0.2",
