--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,11 @@
 {
-	"presets": ["react", "es2015", "stage-0"]
+	"presets": [
+		["env", {
+			"modules": false,
+			"debug": true,
+			"useBuiltIns": true
+		}],
+		"react",
+		"stage-0"
+	]
 }
