--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "morgan": "^1.8.2",
     "mz": "^2.7.0",
     "style-loader": "^0.18.2",
+    "sun-mock-middleware": "^0.0.2",
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.5.0",
